# AI-Newsroom

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: newsroom.yml
config/: editorial.yaml  source_policy.yaml  sources.yaml
examples/: output.example.json
src/: fact_check_one.py  main.py  research.py  research_one.py  run_pipeline.py  write_one.py
src/newsroom/: __init__.py  config.py  editorial.py  fact_check.py  feeds.py  github_models.py  providers.py  ranking.py  research.py  writer.py
tests/: test_fact_check.py  test_feeds.py  test_llm_research.py  test_ranking.py  test_research.py  test_writer.py
