[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-newsroom"
version = "0.1.0"
description = "An educational, auditable AI-assisted newsroom workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser==6.0.11",
    "PyYAML==6.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
